--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "react": "^18",
@@ -24,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
